# FootballTeam_ProjectOOP

./: AfisareEval.h  AfiseazaJucatoriCommand.h  AnalistVideo.cpp  AnalistVideo.h  Antrenor.cpp  Antrenor.h  AntrenorFactory.cpp  AntrenorFactory.h  CMakeLists.txt  Command.h  Echipa.cpp  Echipa.h  Evaluare.h  ExceptieEchipaGoala.h  ExceptieGoluriNegative.h  ExceptieNivelExperienta.h  Jucator.cpp  Jucator.h  Logger.cpp  Logger.h  Meci.cpp  Meci.h  PreparatorFizic.cpp  PreparatorFizic.h  PsihologSportiv.cpp  PsihologSportiv.h  README.md  Sezon.cpp  Sezon.h  antrenori.txt  jucatori.txt  main.cpp
